--- a/Assignment-1-Control_Structures-Question.ipynb
+++ b/Assignment-1-Control_Structures-Question.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e77c80df",
    "metadata": {},
    "outputs": [
@@ -68,14 +68,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the BMI Index: 34\n",
-      "Very Over Weight\n"
+      "enter height in meter1.52\n",
+      "enter weight60\n",
+      "25.969529085872576\n",
+      "OverWeight\n"
      ]
     }
    ],
    "source": [
-    " #Body Mass Index\n",
-    "BMIindex = int(input(\"Enter the BMI Index: \"))\n",
+    " #Body Mass Index formula = weight(kg)/ (height(m)^2)\n",
+    "height=float(input(\"enter height in meter\"))\n",
+    "weight=float(input(\"enter weight\"))\n",
+    "BMIindex = weight/(height**2)\n",
+    "print(BMIindex)\n",
     "if(BMIindex < 18):\n",
     "    print(\"Under Weight\")\n",
     "elif((BMIindex > 18) and (BMIindex<25)):\n",
