--- a/Extra_Assignment_Question-4.ipynb
+++ b/Extra_Assignment_Question-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b69394d5",
    "metadata": {},
    "outputs": [
@@ -11,20 +11,22 @@
      "output_type": "stream",
      "text": [
       "Sub-fields in AI are:\n",
-      "Machine Learning \n",
+      "Machine Learning\n",
       "Neural Networks\n",
       "Vision\n",
       "Robotics\n",
       "Speech Processing\n",
-      "Natural Language Processing\n"
+      "Natural Language\n"
      ]
     }
    ],
    "source": [
     "# Create a class and function, and list out the items in the list\n",
     "class SubfieldsInAI():\n",
-    "    def Subfields():\n",
-    "        print(\"Sub-fields in AI are:\\nMachine Learning \\nNeural Networks\\nVision\\nRobotics\\nSpeech Processing\\nNatural Language Processing\")\n",
+    "     def Subfields():\n",
+    "        lst =[\"Sub-fields in AI are:\",\"Machine Learning\",\"Neural Networks\", \"Vision\", \"Robotics\", \"Speech Processing\", \"Natural Language\"] \n",
+    "        for i in lst:\n",
+    "            print(i)\n",
     "    \n",
     "SubfieldsInAI.Subfields()\n"
    ]
